--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Síntoníza-te</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <header class="position-fixed vw-100">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- <header class="position-fixed vw-100">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-sm">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -34,20 +35,22 @@
                 </div>
             </div>
         </nav>
-    </header>
+    </header> -->
 
     <main>
         <section id="headline"">
             <div class=" container-sm">
             <div class="row">
                 <div class="col-12 col-sm-6 vh-100 d-flex align-items-center">
-                    <div class="text-center">
+                    <div class="text-center text-white">
                         <h1>Síntoniza-te</h1>
                         <span>Online & Gratuito</span>
                         <h3>Descobre os segredos da tua mente:</h3>
                         <p>Elimina as crenças e os bloqueios que te impede de viver a vida que
                             desejas.</p>
-                        <a href="#" class="btn btn-primary">Quero fazer parte da transformação gratuita</a>
+                        <a href="#" class="btn btn-gradient rounded-5 text-white fw-bold">Quero fazer parte da
+                            transformação
+                            gratuita</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6"></div>
@@ -80,7 +83,7 @@
             </div>
         </section>
 
-        <section id="section3" class="py-5">
+        <section id="section3" class="py-5 text-white">
             <div class="w-full d-flex justify-content-center align-items-center py-5">
                 <h2>O que vaís aprender?</h2>
             </div>
@@ -117,12 +120,17 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="section4">
+            <div class="container">
                 <div class="row g-5">
                     <div class="col-12 col-sm-6">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5vl7JTcT_gToPMsWNDhBdjq6TsA6o9scv-h0oTgpsfw&s"
                             width="100%" alt="...">
                     </div>
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6 text-white">
                         <h4>Esta Masterclass</h4>
                         <ol>
                             <li>
@@ -152,7 +160,7 @@
             </div>
         </section>
 
-        <section id="section4" class="py-5">
+        <section id="section5" class="py-5">
             <div class="container-sm">
                 <div class="row g-5">
                     <div class="col-12 col-sm-6">
@@ -179,7 +187,7 @@
             </div>
         </section>
 
-        <section id="section5" class="pt-3 pb-5">
+        <section id="section6" class="pt-3 pb-5">
             <div class="container-sm">
                 <div class="w-full d-flex justify-content-center">
                     <div class="border p-5 border-2 border-black rounded-2">
@@ -200,8 +208,9 @@
                                     class="form-control rounded-5 border-black text-center">
                             </div>
                             <div class="py-2">
-                                <button class="btn btn-primary btn-full" type="submit">Quero ter acesso as
-                                    aulas</button>
+                                <button class="btn btn-gradient rounded-5 text-white fw-bold" type="submit">
+                                    Quero ter acesso as aulas
+                                </button>
                             </div>
                         </form>
                     </div>
@@ -209,8 +218,6 @@
             </div>
         </section>
     </main>
-
-    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
